tests/checker/diagnostics/0369_exception_constructor_arg_mismatch_05.ml.infer.expected
File "0369_exception_constructor_arg_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0369_exception_constructor_arg_mismatch_05 is not a valid module name.

File "0369_exception_constructor_arg_mismatch_05.ml", line 2, characters 18-22:
2 | let _ = E_epsilon true
                      ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
